# SWE-smith

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yaml  pytest.yaml
agent/: _traj_mgr.sh
configs/: install_repo.sh
configs/bug_gen/: README.md  lm_modify.yml
configs/train/: dpo_qwen_32b.yml  dpo_qwen_7b.yml  full_ft_qwen_32b.yml  full_ft_qwen_7b.yml
docs/: blog.html  index.html
docs/css/: custom.css
docs/getting_started/: index.md  installation.md  quickstart.md
docs/guides/: create_instances.md  env_construction.md  harnesses.md  train_swe_agent.md
docs/overrides/: main.html
scripts/: cheatsheet.sh  train.run_dpo_torchtune.sh  train.serve_sglang.sh
swesmith/: __init__.py  constants.py  utils.py
swesmith/bug_gen/: collect_patches.py  criteria.py  get_cost.py  utils.py
swesmith/bug_gen/adapters/: __init__.py  c.py  golang.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py
swesmith/bug_gen/combine/: same_file.py  same_module.py
swesmith/bug_gen/llm/: modify.py  rewrite.py  utils.py
swesmith/bug_gen/mirror/: generate.py
swesmith/bug_gen/procedural/: __init__.py  classes.py  control_flow.py  generate.py  operations.py  remove.py
swesmith/build_repo/: README.md  create_images.py  create_mirror_repo.py  download_images.py  merge_trajectories_dataset.py  test_install.py  try_install.py  try_install_py.py
swesmith/build_repo/envs/: sweenv_Cog-Creators__Red-DiscordBot_33e0eac741955ce5b7e89d9b8f2f2712727af770.sh  sweenv_Cog-Creators__Red-DiscordBot_33e0eac741955ce5b7e89d9b8f2f2712727af770.yml  sweenv_HIPS__autograd_ac044f0de1185b725955595840135e9ade06aaed.sh  sweenv_HIPS__autograd_ac044f0de1185b725955595840135e9ade06aaed.yml  sweenv_Instagram__MonkeyType_70c3acf62950be5dfb28743c7a719bfdecebcd84.sh  sweenv_Instagram__MonkeyType_70c3acf62950be5dfb28743c7a719bfdecebcd84.yml  sweenv_Knio__dominate_9082227e93f5a370012bb934286caf7385d3e7ac.sh  sweenv_Mimino666__langdetect_a1598f1afcbfe9a758cfd06bd688fbc5780177b2.sh  sweenv_Mimino666__langdetect_a1598f1afcbfe9a758cfd06bd688fbc5780177b2.yml  sweenv_Project-MONAI__MONAI_a09c1f08461cec3d2131fde3939ef38c3c4ad5fc.sh  sweenv_Project-MONAI__MONAI_a09c1f08461cec3d2131fde3939ef38c3c4ad5fc.yml  sweenv_PyCQA__flake8_cf1542cefa3e766670b2066dd75c4571d682a649.sh  sweenv_PyCQA__flake8_cf1542cefa3e766670b2066dd75c4571d682a649.yml  sweenv_Suor__funcy_207a7810c216c7408596d463d3f429686e83b871.sh  sweenv_Suor__funcy_207a7810c216c7408596d463d3f429686e83b871.yml  sweenv_adrienverge__yamllint_8513d9b97da3b32453b3fccb221f4ab134a028d7.sh  sweenv_adrienverge__yamllint_8513d9b97da3b32453b3fccb221f4ab134a028d7.yml  sweenv_agronholm__exceptiongroup_0b4f49378b585a338ae10abd72ec2006c5057d7b.sh  sweenv_agronholm__exceptiongroup_0b4f49378b585a338ae10abd72ec2006c5057d7b.yml  sweenv_agronholm__typeguard_b6a7e4387c30a9f7d635712157c889eb073c1ea3.sh  (+236 more)
swesmith/harness/: eval.py  gather.py  grading.py  log_parsers.py  utils.py  valid.py
swesmith/issue_gen/: generate.py  get_from_pr.py  get_from_tests.py  get_static.py  utils.py  viewer.py
swesmith/profiles/: __init__.py  base.py  c.py  golang.py  java.py  javascript.py  php.py  python.py  rust.py  utils.py
swesmith/train/: README.md  download_checkpoint.py  serve_sglang.py
swesmith/train/run/: ft_torchtune.py  (+2 more)
tests/: conftest.py  test_utils.py
tests/bug_gen/: test_utils.py
tests/harness/: test_grading.py  test_log_parsers.py
tests/profiles/: test_base.py  test_profiles_golang.py  test_profiles_python.py
tests/test_logs/: ft_xml_example.jsonl  pandas-dev__pandas.95280573.pr_53652.json
(+28 files in other folders)
