[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "swesmith"
dynamic = ["version"]
authors = [
    {name = "John Yang", email = "byjohnyang@gmail.com"}
]
description = "The official SWE-smith package - A toolkit for generating software engineering training data at scale."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "benchmark", "code"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astor",
    "datasets",
    "docker",
    "ghapi",
    "jupyter",
    "libcst",
    "litellm",
    "matplotlib",
    "modal",
    "openai",
    "pre-commit",
    "python-dotenv",
    "rich",
    "sglang",
    "sparklines",
    "swebench",
    "tiktoken",
    "tqdm",
    "tree-sitter>=0.23",
    "tree-sitter-c==0.23.4",
    "tree-sitter-go",
    "tree-sitter-javascript",
    "tree-sitter-java",
    "tree-sitter-ruby",
    "tree-sitter-rust==v0.23.2",
    "unidiff",
    "textual",
    "tree-sitter-php>=0.23.11",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-glightbox",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]>=0.18",
    "mike",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "swesmith.__version__"}

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[project.urls]
"Documentation" = "https://github.com/SWE-bench/SWE-smith"
"Bug Reports" = "https://github.com/SWE-bench/SWE-smith/issues"
"Source Code" = "https://github.com/SWE-bench/SWE-smith"
"Website" = "https://swesmith.com"

[tool.ruff]
exclude = ["notebooks"]
